@startuml
hide circle
skinparam classAttributeIconSize 0

package "cashflow.analytics" {
    class AnalyticsManager {
        - data: FinanceData
        - dataLoader: AnalyticDataLoader
        + getMonthlySummary(month: int, year: int): String
        + showTrendOverTime(dataType: String, start: LocalDate, end: LocalDate, interval: String)
        + showSpendingInsights(month: int, year: int)
        + showCategoryBreakdown(month: int, year: int)
    }
    package utils{
        class AnalyticDataLoader {
            - data: FinanceData
            + getTotalIncomeForMonth(month: int, year: int): double
            + getTotalExpensesForMonth(month: int, year: int): double
            + getNetSavingsForMonth(month: int, year: int): double
            + retrieveTransactionsForMonth(month: int, year: int): ArrayList<Finance>
            + retrieveTransactionsFromRange(start: LocalDate, end: LocalDate): ArrayList<Finance>
            + retrieveMonthlyExpenses(month: int, year: int): ArrayList<Expense>
            + sumExpensesByCategory(expenses: List<Expense>): Map<String, Double>
        }
    }
}

package "cashflow.model" {
    class FinanceData {
        + getExpenseManager(): ExpenseManager
        + getIncomeManager(): IncomeManager
    }
}

package "expenseincome.expense" {
    class Expense
}

package "cashflow.model.interfaces" {
    abstract class Finance {
        + getDate(): LocalDate
        + getAmount(): double
        + getType(): String
    }
}

package cashflow.analytics.command {

    abstract class AnalyticGeneralCommand {
        + execute(analyticManager: AnalyticsManager): void
        + handleAnalyticCommand(scanner: Scanner, analyticManager: AnalyticsManager): void
    }

    class OverviewCommand
    class SpendingInsightCommand
    class TrendCommand
    class SpendingBreakDownCommand

    OverviewCommand --|> AnalyticGeneralCommand
    SpendingInsightCommand --|> AnalyticGeneralCommand
    TrendCommand --|> AnalyticGeneralCommand
    SpendingBreakDownCommand --|> AnalyticGeneralCommand
}

AnalyticsManager --> AnalyticDataLoader
AnalyticsManager --> FinanceData
AnalyticDataLoader --> FinanceData
AnalyticDataLoader --> Finance
AnalyticDataLoader --> Expense
Expense --|> Finance

@enduml
